--- a/web/styles.less
+++ b/web/styles.less
@@ -2,6 +2,20 @@
   width: 400px;
   height: 400px;
   border: thin solid hsla(0, 0%, 0%, .5);
+
+  td {
+    border: thin solid hsla(0, 0%, 0%, .7);
+  }
+
+  .zone {
+    width: 100%;
+    height: 100%;
+    background: hsla(0, 0%, 0%, .3)
+  }
+
+  .zone.highlight {
+    background: blue;
+  }
   
   > table {
     height: 100%;
@@ -26,7 +40,4 @@
     width: 100%;
   }
 
-  td {
-    border: thin solid hsla(0, 0%, 0%, .7);
-  }
 }
