--- a/web/styles.less
+++ b/web/styles.less
@@ -8,15 +8,21 @@
   }
 
   .zone {
+    transition: opacity 0.2s;
     width: 100%;
     height: 100%;
-    background: hsla(0, 0%, 0%, .3)
+    background: red;
+    opacity: .5;
+  }
+
+  .strike-zone-table .zone {
+    background: green;
   }
 
   .zone.highlight {
-    background: blue;
+    opacity: .95;
   }
-  
+
   > table {
     height: 100%;
     width: 100%;
