--- a/web/styles.less
+++ b/web/styles.less
@@ -1,3 +1,7 @@
+.track-name {
+  font-size: 16pt;
+}
+
 #pitchBox {
   width: 400px;
   height: 400px;
@@ -13,6 +17,9 @@
     height: 100%;
     background: red;
     opacity: .5;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 18pt;
   }
 
   .strike-zone-table .zone {
