--- a/web/styles.less
+++ b/web/styles.less
@@ -12,22 +12,21 @@
   }
 
   .zone {
-    transition: opacity 0.2s;
+    transition: background 0.2s;
     width: 100%;
     height: 100%;
-    background: red;
-    opacity: .5;
+    background: white;
     text-align: center;
     vertical-align: middle;
     font-size: 18pt;
   }
 
-  .strike-zone-table .zone {
-    background: green;
+  .zone.highlight {
+    background: red;
   }
 
-  .zone.highlight {
-    opacity: .95;
+  .strike-zone-table .zone.highlight{
+    background: green;
   }
 
   > table {
