Properly sorts the pitches and shows pitch info

--- a/web/styles.less
+++ b/web/styles.less
@@ -2,10 +2,16 @@
   font-size: 16pt;
 }
 
+#playButton {
+  margin: 10px;
+}
+
 #pitchBox {
   width: 400px;
   height: 400px;
   border: thin solid hsla(0, 0%, 0%, .5);
+  margin-bottom: 20px;
+  margin-top: 20px;
 
   td {
     border: thin solid hsla(0, 0%, 0%, .7);
