Give data credits and generate a song playlist

--- a/web/styles.less
+++ b/web/styles.less
@@ -25,6 +25,10 @@ a {
   text-align: left;
 }
 
+.track-name.highlight {
+  font-size: 16pt;
+}
+
 #playButton {
   background-color: HSL(114, 100%, 41%);
   color: white;
