Adds tribute to Stan Musial

--- a/web/styles.less
+++ b/web/styles.less
@@ -4,6 +4,13 @@ body {
   background-color: HSL(0, 0%, 97%);
 }
 
+header {
+  img {
+    float: left;
+    margin-right: 12px;
+  }
+}
+
 a {
   color: HSL(114, 100%, 41%);
 }
